# Axel-Susana-Silvia

./: CMakeLists.txt  SGR.c  SGR.h  avl.c  avl.h  bussines.c  bussines.h  catalogo_bussines.c  catalogo_bussines.h  catalogo_reviews.c  catalogo_reviews.h  catalogo_users.c  catalogo_users.h  leitura.c  leitura.h  main.c  menu.c  menu.h  paginacao.c  paginacao.h  querys.c  querys.h  reviews.h  user.c  user.h  users.c  users.h
Axel/: CMakeLists.txt  SGR.c  SGR.h  avl.c  bussines.c  bussines.h  catalogo_bussines.c  catalogo_bussines.h  catalogo_reviews.c  catalogo_reviews.h  catalogo_users.c  catalogo_users.h  leitura.c  leitura.h  main.c  menu.c  menu.h  paginacao.c  paginacao.h  reviews.c  reviews.h  user.c  user.h
